service-mesh/deploy/account/account-deploy.yaml
# this file for deployment account
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: account
  labels:
    app: account
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
      - name: account
        image: tnindo/account:v1stag.0.31
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /go/src/account/logs
          name: account-logs
      restartPolicy: Always
      volumes:
      - name: account-logs
        hostPath:
          path: /data/saving_account/logs 
      imagePullSecrets:
      - name: regsecret
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
