service-mesh/deploy/account/account-egress.yaml
# this configuration is use egress rule from account service connect to external service
# for example in this part is account service will be connect to 
# - sav-txn
# - saving-mongo
# - saving-redis

# every serviceEntry is describe with ports property ,it's mean that port will be open in service account
# so service account connect to external service at port 32104, 3004  for connection saving-txn.default-svc.cluster.local (represent host name)
# and the supported protocol is HTTP, HTTP2, TCP, MONGO 
# http2 is represent the grpc connection

apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: account-egress-txn
spec:
  hosts:
    - dsav-txn.default.svc.cluster.local
  ports:
    - number: 32104
      name: txn-http
      protocol: HTTP
    - number: 58084
      name: txn-grpc
      protocol: HTTP2
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: account-egress-mongo
spec:
  hosts:
    - mongo.default.svc.cluster.local
  ports:
    - number: 31111
      name: mongo
      protocol: MONGO
---
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: account-egress-mongo
spec:
  hosts:
  - mongo.default.svc.cluster.local
  tcp:
  - match:
    - port: 31111
    route:
    - destination:
        host: mongo.default.svc.cluster.local
        port:
          number: 31111
# apiVersion: networking.istio.io/v1alpha3
# kind: ServiceEntry
# metadata:
#   name: account-egress-redis
# spec:
#   hosts:
#     - dsav-redis.default.svc.cluster.local
#   posts:
#     - number: 31112
#       name: db-redis
#       protocol: TCP
